--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node src/server.ts",
     "test": "jest1"
   },
   "dependencies": {
