--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "test": "jest1"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/jest": "^29.5.6",
     "@types/node": "^20.8.9",
